--- a/views/components/side-menu.ejs
+++ b/views/components/side-menu.ejs
@@ -39,7 +39,7 @@
             </div>
 
             <!-- User Management -->
-            <div class="nav-item">
+            <div class="nav-item" id="userManagementNav" data-user-role="">
                 <a class="rail-btn" href="/user-management" title="User Management">
                     <img src="/assets/images/user-management-icon.svg" alt="Users" class="icon-default" />
                     <img src="/assets/images/user-management-icon-hover.svg" alt="Users" class="icon-hover" />
