--- a/views/user_details.ejs
+++ b/views/user_details.ejs
@@ -118,9 +118,11 @@
                         </div>
                     </div>
                     <div class="form-field">
-                        <label for="newPassword">* New Password</label>
-                        <div class="password-strength-container">
-                            <span class="password-strength" id="passwordStrength"></span>
+                        <div class="label-strength-row">
+                            <label for="newPassword">* New Password</label>
+                            <div class="password-strength-container">
+                                <span class="password-strength" id="passwordStrength"></span>
+                            </div>
                         </div>
                         <div class="input-container">
                             <input type="password" id="newPassword" placeholder="************" required>
